--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,95 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-caption: var(--font-caption);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --background: 229 27% 8%;
+  --foreground: 232 28% 79%;
+  --muted: 229 12% 15%;
+  --muted-foreground: 229 12% 65%;
+  --popover: 229 27% 5%;
+  --popover-foreground: 232 28% 89%;
+  --card: 229 27% 6%;
+  --card-foreground: 232 28% 84%;
+  --border: 229 17% 13%;
+  --input: 229 17% 16%;
+  --primary: 174 42% 65%;
+  --primary-foreground: 174 42% 5%;
+  --secondary: 174 30% 25%;
+  --secondary-foreground: 174 30% 85%;
+  --accent: 229 27% 23%;
+  --accent-foreground: 229 27% 83%;
+  --destructive: 2 93% 47%;
+  --destructive-foreground: 0 0% 100%;
+  --ring: 174 42% 65%;
+  --chart-1: 174 42% 65%;
+  --chart-2: 174 30% 25%;
+  --chart-3: 229 27% 23%;
+  --chart-4: 174 30% 28%;
+  --chart-5: 174 45% 65%;
+  --radius: 0.5rem;
+  --sidebar: var(--background);
+  --sidebar-foreground: var(--foreground);
+  --sidebar-primary: var(--primary);
+  --sidebar-primary-foreground: var(--primary-foreground);
+  --sidebar-accent: var(--accent);
+  --sidebar-accent-foreground: var(--accent-foreground);
+  --sidebar-border: var(--border);
+  --sidebar-ring: var(--ring);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  html.dark, html {
+    background-color: hsl(229 27% 8%);
+    color: hsl(232 28% 79%);
+  }
+  body {
+    @apply bg-background text-foreground;
+    background-color: hsl(229 27% 8%);
+    color: hsl(232 28% 79%);
+  }
 }
